change action star trigger

--- a/.github/workflows/norminette.yml
+++ b/.github/workflows/norminette.yml
@@ -1,10 +1,6 @@
 name: norminette
 
-on:
-  push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+on: push
 
 jobs:
   norminette:
