--- a/.github/workflows/norminette.yml
+++ b/.github/workflows/norminette.yml
@@ -1,6 +1,10 @@
 name: norminette
 
-on: push
+on:
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
 
 jobs:
   norminette:
